Include Continuous Training

--- a/index.html
+++ b/index.html
@@ -515,7 +515,12 @@ Conducted in the R&D department. Feasibility study of an Autonomous Electronic K
 </p>
 </div>
 </div>
+<br>
 
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#otherTitlesModal">
+    View Continuous Training
+  </button>
 <br><br>
 
 <h3>Papers and Publications</h3>
@@ -654,6 +659,49 @@ Conducted in the R&D department. Feasibility study of an Autonomous Electronic K
 
 
 
+  
+  <!-- Modal -->
+  <div class="modal fade" id="otherTitlesModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="otherTitlesModalLabel">Continuous Training</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <h4>Technical Background</h4>
+            <ul>
+                <li>ADMINISTRATION AND OPERATION MYSQL</li>
+                <li>ADMINISTRATION AND OPERATION OF TCP/IP NETWORKS UNDER LINUX</li>
+                <li>ADVANCED SECURITY IN LINUX</li>
+                <li>CERTIFIED WEB COMPONENT DEVELOPER</li>
+                <li>COMPUTER SECURITY</li>
+                <li>IMPLEMENTING AND MANAGING MICROSOFT EXCHANGE SERVER 2007 NETWORK INFRASTRUCTURE</li>
+                <li>INDUSTRIAL CONTROL: PLCs. IEC 61131 STANDARD</li>
+                <li>PLANE GEOMETRY AND CAD DRAWING</li>
+                <li>SYSTEM ADMINISTRATOR: GNU/LINUX</li>
+                <li>WEB PROGRAMMING PHP / MySQL</li>
+                <li>WEB SERVICES</li>
+                <li>WEBSITE CREATION</li>
+                <li>WIRELESS: INTRODUCTION TO IEEE 802.11 WIRELESS NETWORKS</li>
+            </ul>
+            <h4>Management Background</h4>
+            <ul>            
+                <li>PROJECTS MANAGEMENT</li>
+                <li>INTEGRATED MANAGEMENT SYSTEMS</li>
+                <li>MANAGEMENT OF I.T. SERVICES BY ITIL</li>
+                <li>NEW TECHNOLOGIES APPLIED TO THE MANAGEMENT OF SMES</li>
+                <li>TRAINER OF TRAINERS</li>
+          </ul>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>          
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
