--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ Conducted in the R&D department. Feasibility study of an Autonomous Electronic K
 <br>
 
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#otherTitlesModal">
+<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#otherTitlesModal">
     View Continuous Training
   </button>
 <br><br>
@@ -662,7 +662,7 @@ Conducted in the R&D department. Feasibility study of an Autonomous Electronic K
   
   <!-- Modal -->
   <div class="modal fade" id="otherTitlesModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="otherTitlesModalLabel">Continuous Training</h5>
@@ -671,7 +671,8 @@ Conducted in the R&D department. Feasibility study of an Autonomous Electronic K
           </button>
         </div>
         <div class="modal-body">
-            <h4>Technical Background</h4>
+            <h5>Technical Background</h5>
+            <br>
             <ul>
                 <li>ADMINISTRATION AND OPERATION MYSQL</li>
                 <li>ADMINISTRATION AND OPERATION OF TCP/IP NETWORKS UNDER LINUX</li>
@@ -687,7 +688,9 @@ Conducted in the R&D department. Feasibility study of an Autonomous Electronic K
                 <li>WEBSITE CREATION</li>
                 <li>WIRELESS: INTRODUCTION TO IEEE 802.11 WIRELESS NETWORKS</li>
             </ul>
-            <h4>Management Background</h4>
+            <br>
+            <h5>Management Background</h5>
+            <br>
             <ul>            
                 <li>PROJECTS MANAGEMENT</li>
                 <li>INTEGRATED MANAGEMENT SYSTEMS</li>
@@ -695,6 +698,7 @@ Conducted in the R&D department. Feasibility study of an Autonomous Electronic K
                 <li>NEW TECHNOLOGIES APPLIED TO THE MANAGEMENT OF SMES</li>
                 <li>TRAINER OF TRAINERS</li>
           </ul>
+          <br>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>          
