Improving index.html

--- a/index.html
+++ b/index.html
@@ -517,10 +517,21 @@ Conducted in the R&D department. Feasibility study of an Autonomous Electronic K
 </div>
 <br>
 
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#otherTitlesModal">
+
+
+<div class="row">
+    <div class="col-md-2">Continuos Training</div>
+    <div class="col-md-10">
+    Several courses during my professional experience, trying to get always updated. 
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#otherTitlesModal">
     View Continuous Training
-  </button>
+    </button>
+    </div>
+    </div>
+    <br>
+
+
 <br><br>
 
 <h3>Papers and Publications</h3>
