--- a/index.html
+++ b/index.html
@@ -520,11 +520,12 @@ Conducted in the R&D department. Feasibility study of an Autonomous Electronic K
 
 
 <div class="row">
-    <div class="col-md-2">Continuos Training</div>
+    <div class="col-md-2"></div>
     <div class="col-md-10">
-    Several courses during my professional experience, trying to get always updated. 
+    Several Continuous Training Courses during my professional experience, trying to get always updated. 
+    <br>
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#otherTitlesModal">
+    <button type="button" class="btn btn-sm btn-secondary" data-toggle="modal" data-target="#otherTitlesModal">
     View Continuous Training
     </button>
     </div>
@@ -676,38 +677,38 @@ Conducted in the R&D department. Feasibility study of an Autonomous Electronic K
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="otherTitlesModalLabel">Continuous Training</h5>
+          <h5 class="modal-title" id="otherTitlesModalLabel">CONTINUOUS TRAINING COURSES</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-            <h5>Technical Background</h5>
+            <h6><strong>Technical Background</strong></h6>
             <br>
             <ul>
-                <li>ADMINISTRATION AND OPERATION MYSQL</li>
-                <li>ADMINISTRATION AND OPERATION OF TCP/IP NETWORKS UNDER LINUX</li>
-                <li>ADVANCED SECURITY IN LINUX</li>
-                <li>CERTIFIED WEB COMPONENT DEVELOPER</li>
-                <li>COMPUTER SECURITY</li>
-                <li>IMPLEMENTING AND MANAGING MICROSOFT EXCHANGE SERVER 2007 NETWORK INFRASTRUCTURE</li>
-                <li>INDUSTRIAL CONTROL: PLCs. IEC 61131 STANDARD</li>
-                <li>PLANE GEOMETRY AND CAD DRAWING</li>
-                <li>SYSTEM ADMINISTRATOR: GNU/LINUX</li>
-                <li>WEB PROGRAMMING PHP / MySQL</li>
-                <li>WEB SERVICES</li>
-                <li>WEBSITE CREATION</li>
-                <li>WIRELESS: INTRODUCTION TO IEEE 802.11 WIRELESS NETWORKS</li>
+                <li>Administration And Operation Mysql</li>
+                <li>Administration And Operation Of Tcp/Ip Networks Under Linux</li>
+                <li>Advanced Security In Linux</li>
+                <li>Certified Web Component Developer</li>
+                <li>Computer Security</li>
+                <li>Implementing And Managing Microsoft Exchange Server 2007 Network Infrastructure</li>
+                <li>Industrial Control: Plcs. Iec 61131 Standard</li>
+                <li>Plane Geometry And Cad Drawing</li>
+                <li>System Administrator: Gnu/Linux</li>
+                <li>Web Programming Php / Mysql</li>
+                <li>Web Services</li>
+                <li>Website Creation</li>
+                <li>Wireless: Introduction To Ieee 802.11 Wireless Networks</li>
             </ul>
             <br>
-            <h5>Management Background</h5>
+            <h6><strong>Management Background</strong></h6>
             <br>
             <ul>            
-                <li>PROJECTS MANAGEMENT</li>
-                <li>INTEGRATED MANAGEMENT SYSTEMS</li>
-                <li>MANAGEMENT OF I.T. SERVICES BY ITIL</li>
-                <li>NEW TECHNOLOGIES APPLIED TO THE MANAGEMENT OF SMES</li>
-                <li>TRAINER OF TRAINERS</li>
+                <li>Projects Management</li>
+                <li>Integrated Management Systems</li>
+                <li>Management Of I.T. Services By Itil</li>
+                <li>New Technologies Applied To The Management Of Smes</li>
+                <li>Trainer Of Trainers</li>
           </ul>
           <br>
         </div>
