Improving index.html

--- a/index.html
+++ b/index.html
@@ -522,12 +522,15 @@ Conducted in the R&D department. Feasibility study of an Autonomous Electronic K
 <div class="row">
     <div class="col-md-2"></div>
     <div class="col-md-10">
+    <strong>Continuous Training</strong><a class="float-right" data-toggle="modal" data-target="#otherTitlesModal" title="Show Continuous Training Curses">Show Curses</a><br>
     Several Continuous Training Courses during my professional experience, trying to get always updated. 
     <br>
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-sm btn-secondary" data-toggle="modal" data-target="#otherTitlesModal">
+    <!-- 
+    <button type="button" class="btn btn-sm btn-secondary" >
     View Continuous Training
     </button>
+    -->
     </div>
     </div>
     <br>
