Improving index.html

--- a/index.html
+++ b/index.html
@@ -522,8 +522,8 @@ Conducted in the R&D department. Feasibility study of an Autonomous Electronic K
 <div class="row">
     <div class="col-md-2"></div>
     <div class="col-md-10">
-    <strong>Continuous Training</strong><a class="float-right" data-toggle="modal" data-target="#otherTitlesModal" title="Show Continuous Training Curses">Show Curses</a><br>
-    Several Continuous Training Courses during my professional experience, trying to get always updated. 
+    <strong>Continuous Training</strong><a class="float-right" href="#" data-toggle="modal" data-target="#otherTitlesModal" title="Show Continuous Training Curses">show curses</a><br>
+    <i>Several Continuous Training Courses during my professional experience, trying to get always updated.</i>
     <br>
     <!-- Button trigger modal -->
     <!-- 
