Improving index.html

--- a/index.html
+++ b/index.html
@@ -689,19 +689,19 @@ Conducted in the R&D department. Feasibility study of an Autonomous Electronic K
             <h6><strong>Technical Background</strong></h6>
             <br>
             <ul>
-                <li>Administration And Operation Mysql</li>
-                <li>Administration And Operation Of Tcp/Ip Networks Under Linux</li>
+                <li>Administration And Operation MySQL</li>
+                <li>Administration And Operation Of TCP/IP Networks Under Linux</li>
                 <li>Advanced Security In Linux</li>
                 <li>Certified Web Component Developer</li>
                 <li>Computer Security</li>
                 <li>Implementing And Managing Microsoft Exchange Server 2007 Network Infrastructure</li>
-                <li>Industrial Control: Plcs. Iec 61131 Standard</li>
+                <li>Industrial Control: PLCs. IEC 61131 Standard</li>
                 <li>Plane Geometry And Cad Drawing</li>
-                <li>System Administrator: Gnu/Linux</li>
-                <li>Web Programming Php / Mysql</li>
+                <li>System Administrator: GNU/Linux</li>
+                <li>Web Programming PHP / MySQL</li>
                 <li>Web Services</li>
                 <li>Website Creation</li>
-                <li>Wireless: Introduction To Ieee 802.11 Wireless Networks</li>
+                <li>Wireless: Introduction To IEEE 802.11 Wireless Networks</li>
             </ul>
             <br>
             <h6><strong>Management Background</strong></h6>
@@ -709,8 +709,8 @@ Conducted in the R&D department. Feasibility study of an Autonomous Electronic K
             <ul>            
                 <li>Projects Management</li>
                 <li>Integrated Management Systems</li>
-                <li>Management Of I.T. Services By Itil</li>
-                <li>New Technologies Applied To The Management Of Smes</li>
+                <li>Management Of I.T. Services By ITIL</li>
+                <li>New Technologies Applied To The Management Of SMEs</li>
                 <li>Trainer Of Trainers</li>
           </ul>
           <br>
