--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 	</div>
 	<div class="col-md-3">
-<center>		<img src="notarobot-original.png" class="img-responsive" width="150px;" ></center>
+<center>		<img src="notarobot-svg.svg" class="img-responsive" width="150px;" ></center>
 	</div>
 </div>
 
