--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <div class="row">
 <div class="col-md-3"><br>
 <!-- <img src="dpr.jpg" class="img-fluid rounded" /> -->
-<img class="img-responsive" width="100%" src="https://www.wimasis.com/img/about-us/perez.png" alt="Daniel Pérez" data-toggle="tooltip" data-placement="top" title="I'm just a nice guy" >
+<img class="img-responsive" width="100%" src="assets/perez.png" alt="Daniel Pérez" data-toggle="tooltip" data-placement="top" title="I'm just a nice guy" >
 </div>
 <div class="col-md-9">
 <br>
