Minor update in links

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ Conducted in the R&D department. Feasibility study of an Autonomous Electronic K
 <br>
 <div class="row">
 <div class="col-md-2">2014<br>
-<a href="assets/tfm.pdf" target="_blank" title="Sistema de guiado automático para robot autónomo móvil basado en visión por computador y lógica difusa." class=""><i class="fa fa-cloud-download fa-2x"></i></a>
+<a href="assets/pdf/tfm.pdf" target="_blank" title="Sistema de guiado automático para robot autónomo móvil basado en visión por computador y lógica difusa." class=""><i class="fa fa-cloud-download fa-2x"></i></a>
 </div>
 <div class="col-md-10">
 <strong>Sistema de guiado automático para robot autónomo móvil basado en visión por computador y lógica difusa.</strong><br>
@@ -503,7 +503,7 @@ Conducted in the R&D department. Feasibility study of an Autonomous Electronic K
 <br>
 <div class="row">
 <div class="col-md-2">2013<br>
-<a href="assets/pfc.pdf" target="_blank"
+<a href="assets/pdf/pfc.pdf" target="_blank"
 	title="Diseño e implementación de interfaz persona máquina y sistema de análisis post-misión para robot autónomo móvil Romeo-4R."
 	class=""><i class="fa fa-cloud-download fa-2x"></i></a>
 	</div>
@@ -555,7 +555,7 @@ Conducted in the R&D department. Feasibility study of an Autonomous Electronic K
 <div class="row">
 <div class="col-md-2">2013
 	<br>
-	<a href="assets/conmutacion.pdf" target="_blank"
+	<a href="assets/pdf/conmutacion.pdf" target="_blank"
 		title="Class Notes. Conmutacion."
 		class=""><i class="fa fa-cloud-download fa-2x"></i></a>
 </div>
