--- a/index.html
+++ b/index.html
@@ -265,12 +265,14 @@
 		2016 - Today
 		<br>
 		<img class="img-responsive" width="100%" src="assets/images/OnImagin_Logo_DarkBG.svg" alt="Onimagin Technologies SCA" data-toggle="tooltip" data-placement="top" title="Onimagin Technologies SCA" >
+        <center><i class="fa fa-plus" style="color:gray;"></i></center>
+        <img class="img-responsive" width="100%" src="assets/images/wimasis_logo.svg" alt="Wimasis. Web Image Analysis" data-toggle="tooltip" data-placement="top" title="Wimasis. Web Image Analysis" >
 	</div>
 	<div class="col-md-10">
 		<strong>Onimagin Technologies</strong><a class="float-right" href="https://www.onimagin.com" target="_blank" title="Onimagin Technologies SCA">www.onimagin.com</a><br>
 		<i>Founder and Information Systems.</i><br>
 		<p style="text-align:justify;">
-		Image Analysis Startup.  Our emblem is <i>Turning Images into reality</i>.  With Wimasis as our flagship and main project we try to find partners and clients to apply image analysis algorithms and AI techniques to transform our world.
+		Image Analysis Startup.  Our emblem is <i>Turning Images into reality</i>.  With Wimasis (trademark) as our flagship and main project we try to find partners and clients to apply image analysis algorithms and AI techniques to transform our world.
 		</p>
 		<p style="text-align:justify;">
 			<i>Technologies/skills:</i> C++, Qt, OpenCV, PHP, Python, MySQL, Virtual Machines, Docker, CI/CD, AWS, Shellscripting, Machine Learning, IoT, ...
@@ -282,7 +284,7 @@
 
 <div class="row">
 	<div class="col-md-2">
-		2021 - Today
+		2021 - 2023
 		<br>
 		<img class="img-responsive" width="100%" src="assets/images/ceslopedevega-logo.png" alt="CES Lope de Vega" data-toggle="tooltip" data-placement="top" title="CES Lope de Vega" >
 	</div>
