--- a/index.html
+++ b/index.html
@@ -120,12 +120,7 @@
 
             <figure class="highcharts-figure">
                 <div id="container"></div>
-            </figure>
-        <small>
-            <center>
-                Byte Me! Yes, I still have to work in the percentages
-            </center>
-        </small>
+            </figure>        
         <script>
             Highcharts.chart('container', {
                 chart: {
@@ -226,16 +221,15 @@
                 series: [{
                     data: [
                         { x: 80, y: 60, z: 20, name: 'PHP' },
-                        { x: 80, y: 80, z: 20, name: 'C'},
-                        { x: 90, y: 90, z: 30, name: 'C++'},
-                        { x: 80, y: 80, z: 30, name: 'Bash'},
-                        { x: 20, y: 40, z: 10, name: 'Matlab'},
-                        { x: 80, y: 80, z: 30, name: 'Python'},
+                        { x: 80, y: 80, z: 10, name: 'C'},
+                        { x: 90, y: 90, z: 20, name: 'C++'},
+                        { x: 80, y: 80, z: 10, name: 'Bash'},                        
+                        { x: 80, y: 80, z: 10, name: 'Python'},
                     ],
                 },
                 {
                     data: [
-                        { x: 80, y: 80, z: 10, name: 'Server Management' },
+                        { x: 80, y: 80, z: 10, name: 'SysAdmin/DevOps' },
                         { x: 20, y: 80, z: 10, name: 'Cloud Computing'},
                         { x: 10, y: 90, z: 10, name: 'Standalone'},
                         { x: 80, y: 100, z: 10, name: 'Web'},
