--- a/index.html
+++ b/index.html
@@ -221,27 +221,25 @@
                 series: [{
                     data: [
                         { x: 80, y: 60, z: 20, name: 'PHP' },
-                        { x: 80, y: 80, z: 10, name: 'C'},
+                        { x: 80, y: 80, z: 15, name: 'C'},
                         { x: 90, y: 90, z: 20, name: 'C++'},
-                        { x: 80, y: 80, z: 10, name: 'Bash'},                        
-                        { x: 80, y: 80, z: 10, name: 'Python'},
+                        { x: 80, y: 80, z: 15, name: 'Bash'},                        
+                        { x: 80, y: 80, z: 15, name: 'Python'},
                     ],
                 },
                 {
                     data: [
-                        { x: 80, y: 80, z: 10, name: 'SysAdmin/DevOps' },
-                        { x: 20, y: 80, z: 10, name: 'Cloud Computing'},
-                        { x: 10, y: 90, z: 10, name: 'Standalone'},
-                        { x: 80, y: 100, z: 10, name: 'Web'},
-                        { x: 80, y: 100, z: 10, name: 'API Rest'},
-
+                        { x: 80, y: 80, z: 15, name: 'SysAdmin/DevOps' },
+                        { x: 20, y: 80, z: 15, name: 'Cloud Computing'},
+                        { x: 10, y: 90, z: 15, name: 'Desktop/Standalone'},
+                        { x: 80, y: 100, z: 15, name: 'API:REST/SOAP/WebHooks/...'},
                     ],
                 },
                 {
                     data: [
-                        { x: 20, y: 80, z: 10, name: 'Computer Vision' },
-                        { x: 40, y: 80, z: 10, name: 'Machine Learning'},
-                        { x: 60, y: 60, z: 10, name: 'AI'},
+                        { x: 20, y: 80, z: 15, name: 'Computer Vision' },
+                        { x: 40, y: 80, z: 15, name: 'Machine Learning'},
+                        { x: 60, y: 60, z: 15, name: 'AI'},
 
                     ],
                 }
