--- a/index.html
+++ b/index.html
@@ -219,28 +219,29 @@
                     }
                 },
                 series: [{
+		   name: 'Programming Languages',
                     data: [
 		    	{ x: 100, y: 100, z: 10, name: 'C++'},
 		    	{ x: 80, y: 80, z: 10, name: 'Python'},
                         { x: 80, y: 60, z: 10, name: 'PHP' },
-                        { x: 60, y: 70, z: 10, name: 'C'},
-                        { x: 80, y: 50, z: 10, name: 'Bash'},                        
+			{ x: 70, y: 60, z: 10, name: 'Bash'},                        
+                        { x: 60, y: 70, z: 10, name: 'C'},                        
                     ],
                 },
                 {
+		    name: 'Technologies',
                     data: [
 		    	{ x: 80, y: 100, z: 10, name: 'API:REST/SOAP/WebHooks/...'},
 			{ x: 80, y: 80, z: 10, name: 'SysAdmin/DevOps' },
                         { x: 20, y: 80, z: 10, name: 'Cloud Computing'},
-                        { x: 10, y: 90, z: 10, name: 'Desktop/Standalone'},
-                        
+                        { x: 10, y: 90, z: 10, name: 'Desktop/Standalone'},                        
                     ],
                 },
                 {
+		    name: 'AI',
                     data: [
                         { x: 20, y: 80, z: 10, name: 'Computer Vision' },
-                        { x: 40, y: 80, z: 10, name: 'Machine Learning'},
-                        { x: 60, y: 60, z: 10, name: 'AI'},
+                        { x: 40, y: 80, z: 10, name: 'Machine Learning'},                        
                     ],
                 }
                 ]});
