--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 {
 		    name: 'Technologies',
                     data: [
-		    	{ x: 80, y: 100, z: 10, name: 'API:REST/SOAP/WebHooks/...'},
+		    	{ x: 80, y: 100, z: 10, name: 'API'},
 			{ x: 80, y: 80, z: 10, name: 'SysAdmin/DevOps' },
                         { x: 20, y: 80, z: 10, name: 'Cloud Computing'},
                         { x: 10, y: 90, z: 10, name: 'Desktop/Standalone'},                        
