--- a/index.html
+++ b/index.html
@@ -232,16 +232,16 @@
 		    name: 'Technologies',
                     data: [
 		    	{ x: 80, y: 100, z: 10, name: 'API'},
-			{ x: 80, y: 80, z: 10, name: 'SysAdmin/DevOps' },
-                        { x: 20, y: 80, z: 10, name: 'Cloud Computing'},
-                        { x: 10, y: 90, z: 10, name: 'Desktop/Standalone'},                        
+			{ x: 80, y: 80, z: 10, name: 'On Premise'},
+                        { x: 20, y: 80, z: 10, name: 'Cloud'},
+                        { x: 10, y: 90, z: 10, name: 'Standalone'},                        
                     ],
                 },
                 {
 		    name: 'AI',
                     data: [
-                        { x: 20, y: 80, z: 10, name: 'Computer Vision' },
-                        { x: 40, y: 80, z: 10, name: 'Machine Learning'},                        
+                        { x: 20, y: 80, z: 10, name: 'CV'},
+                        { x: 40, y: 80, z: 10, name: 'ML'},                        
                     ],
                 }
                 ]});
