--- a/index.html
+++ b/index.html
@@ -476,6 +476,23 @@ Conducted in the R&D department. Feasibility study of an Autonomous Electronic K
     </div>
     <br>
 
+<br><br>
+
+<h3>Certifications</h3>
+
+<div class="row">
+<div class="col-md-2">2024
+<br>
+<img class="img-responsive" width="100%" src="https://media.licdn.com/dms/image/D4E0BAQGBQSFW_T23Uw/company-logo_100_100/0/1685099501709/trinity_college_london_logo?e=1720656000&v=beta&t=I7rksxJW_u7HZ-GOoJq40lYKF1AkPk4HhWGoC-OSIBU" alt="Trinity College London" data-toggle="tooltip" data-placement="top" title="Trinity College London" >
+</div>
+<div class="col-md-10">
+<strong>Integrated Skills in English (ISE II - B2)</strong><a class="float-right" href="https://certificates.trinitycollege.com/e4ef2458-f1b4-4cb3-92a7-df21cc0058e1" target="_blank" title="Integrated Skills in English (ISE II - B2)">certificates.trinitycollege.com</a><br>
+<i>ISE — Integrated Skills in English exams. Trinity College London.</i><br>
+<p style="text-align:justify;">
+
+</p>
+</div>
+</div>
 
 <br><br>
 
