--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@ Conducted in the R&D department. Feasibility study of an Autonomous Electronic K
 <br>
 <ul>
 <li><strong>Spanish:</strong> Native</li>
-<li><strong>English:</strong> Proficient</li>
+<li><strong>English:</strong> Proficient (B2)</li>
 </ul>
 		</div>
 	<div class="col-md-4">
