--- a/index.html
+++ b/index.html
@@ -421,7 +421,11 @@ Conducted in the R&D department. Feasibility study of an Autonomous Electronic K
 <h3>Education</h3>
 
 <div class="row">
-<div class="col-md-2">2019 - 2020</div>
+<div class="col-md-2">2019 - 2020
+<br>
+<img class="img-responsive" width="50%" src="https://www.uco.es/investigacion/proyectos/SEBASENet/images/Logo_UCO.png" alt="Universidad de Córdoba" data-toggle="tooltip" data-placement="top" title="Universidad de Córdoba" >
+</div>
+</div>
 <div class="col-md-10">
 <strong>Master in Teaching</strong><a class="float-right" href="https://www.uco.es/" target="_blank" title="Master. University of Córdoba">www.uco.es</a><br>
 <i>Master. University of Córdoba</i><br>
@@ -434,7 +438,10 @@ Conducted in the R&D department. Feasibility study of an Autonomous Electronic K
 <br>
 
 <div class="row">
-<div class="col-md-2">2013 - 2014</div>
+<div class="col-md-2">2013 - 2014
+<br>
+<img class="img-responsive" width="50%" src="https://www.uco.es/investigacion/proyectos/SEBASENet/images/Logo_UCO.png" alt="Universidad de Córdoba" data-toggle="tooltip" data-placement="top" title="Universidad de Córdoba" >
+</div>
 <div class="col-md-10">
 <strong>Master in Intelligent Systems</strong><a class="float-right" href="https://www.uco.es/" target="_blank" title="Master. University of Córdoba">www.uco.es</a><br>
 <i>Master. University of Córdoba</i><br>
@@ -447,7 +454,9 @@ Conducted in the R&D department. Feasibility study of an Autonomous Electronic K
 <br>
 
 <div class="row">
-<div class="col-md-2">1998 - 2012</div>
+<div class="col-md-2">1998 - 2012
+<br>
+<img class="img-responsive" width="50%" src="https://www.us.es/sites/default/files/inline-images/US-marca-principal.png" alt="Universidad de Sevilla" data-toggle="tooltip" data-placement="top" title="Universidad de Sevilla" ></div>
 <div class="col-md-10">
 <strong>Telecommunications Engineer</strong><a class="float-right" href="https://www.us.es/" target="_blank" title="Bachelor. University of Sevilla">www.us.es</a><br>
 <i>Bachelor. University of Sevilla </i><br>
