--- a/index.html
+++ b/index.html
@@ -257,9 +257,9 @@
 	<div class="col-md-2">
 		2016 - Today
 		<br>
-		<img class="img-responsive" width="50%" src="assets/images/OnImagin_Logo_DarkBG.svg" alt="Onimagin Technologies SCA" data-toggle="tooltip" data-placement="top" title="Onimagin Technologies SCA" >
+		<img class="img-responsive" width="50%" src="assets/images/onimagin_favicon.png" alt="Onimagin Technologies SCA" data-toggle="tooltip" data-placement="top" title="Onimagin Technologies SCA" >
         <center><i class="fa fa-plus" style="color:gray;"></i></center>
-        <img class="img-responsive" width="50%" src="assets/images/wimasis_logo.svg" alt="Wimasis. Web Image Analysis" data-toggle="tooltip" data-placement="top" title="Wimasis. Web Image Analysis" >
+        <img class="img-responsive" width="50%" src="assets/images/wimasis-noshade-logo.png" alt="Wimasis. Web Image Analysis" data-toggle="tooltip" data-placement="top" title="Wimasis. Web Image Analysis" >
 	</div>
 	<div class="col-md-10">
 		<strong>Onimagin Technologies</strong><a class="float-right" href="https://www.onimagin.com" target="_blank" title="Onimagin Technologies SCA">www.onimagin.com</a><br>
@@ -321,7 +321,7 @@ data analysis, process automation, equipment integration, ...</p>
 <div class="col-md-2">
 	2013 - 2014
 	<br>
-	<img class="img-responsive" width="50%" src="assets/images/wimasis_logo.svg" alt="Wimasis. Web Image Analysis" data-toggle="tooltip" data-placement="top" title="Wimasis. Web Image Analysis" >
+	<img class="img-responsive" width="50%" src="assets/images/wimasis-noshade-logo.png" alt="Wimasis. Web Image Analysis" data-toggle="tooltip" data-placement="top" title="Wimasis. Web Image Analysis" >
 </div>
 <div class="col-md-10">
 <strong>Wimasis</strong><a class="float-right" href="https://www.wimasis.com" target="_blank" title="Wimasis, Web Image Analysis">www.wimasis.com</a><br>
