--- a/index.html
+++ b/index.html
@@ -257,15 +257,16 @@
 	<div class="col-md-2">
 		2016 - Today
 		<br>
-		<img class="img-responsive" width="50%" src="assets/images/onimagin_favicon.png" alt="Onimagin Technologies SCA" data-toggle="tooltip" data-placement="top" title="Onimagin Technologies SCA" >
-        <center><i class="fa fa-plus" style="color:gray;"></i></center>
-        <img class="img-responsive" width="50%" src="assets/images/wimasis-noshade-logo.png" alt="Wimasis. Web Image Analysis" data-toggle="tooltip" data-placement="top" title="Wimasis. Web Image Analysis" >
+		<img class="img-responsive" width="50%" src="assets/images/onimagin_favicon.png" alt="Onimagin Technologies SCA" data-toggle="tooltip" data-placement="top" title="Onimagin Technologies SCA" >        
 	</div>
 	<div class="col-md-10">
 		<strong>Onimagin Technologies</strong><a class="float-right" href="https://www.onimagin.com" target="_blank" title="Onimagin Technologies SCA">www.onimagin.com</a><br>
 		<i>Founder and Information Systems.</i><br>
 		<p style="text-align:justify;">
-		Image Analysis Startup.  Our emblem is <i>Turning Images into reality</i>.  With Wimasis (trademark) as our flagship and main project we try to find partners and clients to apply image analysis algorithms and AI techniques to transform our world.
+		Image Analysis Startup.  Our emblem is <i>Turning Images into reality</i>.  With <b>Wimasis</b> (trademark) as our flagship and main project we try to find partners and clients to apply image analysis algorithms and AI techniques to transform our world.
+		<center>
+		<img class="img-responsive" width="25%" src="assets/images/wimasis-noshade-logo.png" alt="Wimasis. Web Image Analysis" data-toggle="tooltip" data-placement="top" title="Wimasis. Web Image Analysis" >
+		</center>
 		</p>
 		<p style="text-align:justify;">
 			<i>Technologies/skills:</i> C++, Qt, OpenCV, PHP, Python, MySQL, Virtual Machines, Docker, CI/CD, AWS, Shellscripting, Machine Learning, IoT, ...
