--- a/index.html
+++ b/index.html
@@ -264,9 +264,18 @@
 		<i>Founder and Information Systems.</i><br>
 		<p style="text-align:justify;">
 		Image Analysis Startup.  Our emblem is <i>Turning Images into reality</i>.  With <b>Wimasis</b> (trademark) as our flagship and main project we try to find partners and clients to apply image analysis algorithms and AI techniques to transform our world.
+		<div class="row">
+		<div class="col-md-5">
+		</div>
+		<div class="col-md-2">
 		<center>
-		<img class="img-responsive" width="25%" src="assets/images/wimasis-noshade-logo.png" alt="Wimasis. Web Image Analysis" data-toggle="tooltip" data-placement="top" title="Wimasis. Web Image Analysis" >
+		<img class="img-responsive" width="50%" src="assets/images/wimasis-noshade-logo.png" alt="Wimasis. Web Image Analysis" data-toggle="tooltip" data-placement="top" title="Wimasis. Web Image Analysis" >
 		</center>
+		</div>
+		<div class="col-md-5">
+		</div>
+		</div>
+		
 		</p>
 		<p style="text-align:justify;">
 			<i>Technologies/skills:</i> C++, Qt, OpenCV, PHP, Python, MySQL, Virtual Machines, Docker, CI/CD, AWS, Shellscripting, Machine Learning, IoT, ...
