--- a/index.html
+++ b/index.html
@@ -255,6 +255,27 @@
 
 <div class="row">
 	<div class="col-md-2">
+		2023 - Today
+		<br>
+		<img class="img-responsive" width="50%" src="assets/images/onimagin_favicon.png" alt="Oxigent Technologies" data-toggle="tooltip" data-placement="top" title="Oxigent Technologies SCA" >        
+	</div>
+	<div class="col-md-10">
+		<strong>Oxigent Technologies</strong><a class="float-right" href="https://oxigent.io/" target="_blank" title="Onimagin Technologies SCA">oxigent.io</a><br>
+		<i>Full Stack Developer.</i><br>
+		<p style="text-align:justify;">
+			Collaborating as a freelance developer for several clients in a highly talented team.
+		</p>
+		<p style="text-align:justify;">
+		    <i>Technologies/skills:</i>C++, Qt, CI/CD ...
+		</p>
+	</div>
+</div>
+<br>
+
+	    
+
+<div class="row">
+	<div class="col-md-2">
 		2016 - Today
 		<br>
 		<img class="img-responsive" width="50%" src="assets/images/onimagin_favicon.png" alt="Onimagin Technologies SCA" data-toggle="tooltip" data-placement="top" title="Onimagin Technologies SCA" >        
