--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@
 	<div class="col-md-2">
 		2023 - Today
 		<br>
-		<img class="img-responsive" width="50%" src="assets/images/onimagin_favicon.png" alt="Oxigent Technologies" data-toggle="tooltip" data-placement="top" title="Oxigent Technologies SCA" >        
+		<img class="img-responsive" width="50%" src="assets/images/oxigent_logo.png" alt="Oxigent Technologies" data-toggle="tooltip" data-placement="top" title="Oxigent Technologies" >        
 	</div>
 	<div class="col-md-10">
-		<strong>Oxigent Technologies</strong><a class="float-right" href="https://oxigent.io/" target="_blank" title="Onimagin Technologies SCA">oxigent.io</a><br>
+		<strong>Oxigent Technologies</strong><a class="float-right" href="https://oxigent.io/" target="_blank" title="Onimagin Technologies">oxigent.io</a><br>
 		<i>Full Stack Developer.</i><br>
 		<p style="text-align:justify;">
 			Collaborating as a freelance developer for several clients in a highly talented team.
