--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
             <div class="col-md-2">2024
                 <br>
                 <img class="img-responsive" width="50%"
-                    src="https://media.licdn.com/dms/image/D4E0BAQGBQSFW_T23Uw/company-logo_100_100/0/1685099501709/trinity_college_london_logo?e=1720656000&v=beta&t=I7rksxJW_u7HZ-GOoJq40lYKF1AkPk4HhWGoC-OSIBU"
+                    src="assets/images/trinity_logo.png"
                     alt="Trinity College London" data-toggle="tooltip" data-placement="top"
                     title="Trinity College London">
             </div>
