--- a/index.html
+++ b/index.html
@@ -448,6 +448,26 @@
         <h3>Certifications</h3>
 
         <div class="row">
+            <div class="col-md-2">PREPARING
+                <br>
+                <img class="img-responsive" width="50%"
+                    src="assets/images/psm_i_logo.png"
+                    alt="Professional Scrum Master I" data-toggle="tooltip" data-placement="top"
+                    title="Professional Scrum Master I">
+            </div>
+            <div class="col-md-10">
+                <strong>Professional Scrum Master I (PSM-I)</strong><a class="float-right"
+                    href="https://www.scrum.org/assessments/professional-scrum-master-i-certification" target="_blank"
+                    title="Professional Scrum Master I (PSM-I)"www.scrum.org</a><br>
+                <i>Professional Scrum Master™ I Certification</i><br>
+                <p style="text-align:justify;">
+
+                </p>
+            </div>
+        </div>
+
+        
+        <div class="row">
             <div class="col-md-2">2024
                 <br>
                 <img class="img-responsive" width="50%"
