--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
             <div class="col-md-10">
                 <strong>Professional Scrum Master I (PSM-I)</strong><a class="float-right"
                     href="https://www.scrum.org/assessments/professional-scrum-master-i-certification" target="_blank"
-                    title="Professional Scrum Master I (PSM-I)"www.scrum.org</a><br>
+                    title="Professional Scrum Master I (PSM-I)">www.scrum.org</a><br>
                 <i>Professional Scrum Master™ I Certification</i><br>
                 <p style="text-align:justify;">
 
